; ModuleID = '/home/carl/AnghaBench/git/extr_sequencer.c_is_index_unchanged.c'
source_filename = "/home/carl/AnghaBench/git/extr_sequencer.c_is_index_unchanged.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.repository = type { %struct.index_state* }
%struct.index_state = type { i32 }
%struct.object_id = type { i32 }
%struct.commit = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1
@RESOLVE_REF_READING = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [30 x i8] c"could not resolve HEAD commit\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.repository*)* @is_index_unchanged to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_index_unchanged(%struct.repository* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.repository*, align 8
  %4 = alloca %struct.object_id, align 4
  %5 = alloca %struct.object_id*, align 8
  %6 = alloca %struct.commit*, align 8
  %7 = alloca %struct.index_state*, align 8
  store %struct.repository* %0, %struct.repository** %3, align 8
  %8 = load %struct.repository*, %struct.repository** %3, align 8
  %9 = getelementptr inbounds %struct.repository, %struct.repository* %8, i32 0, i32 0
  %10 = load %struct.index_state*, %struct.index_state** %9, align 8
  store %struct.index_state* %10, %struct.index_state** %7, align 8
  %11 = load i32, i32* @RESOLVE_REF_READING, align 4
  %12 = call i32 @resolve_ref_unsafe(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %11, %struct.object_id* %4, i32* null)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %17, label %14

14:                                               ; preds = %1
  %15 = call i32 @_(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  %16 = call i32 @error(i32 %15)
  store i32 %16, i32* %2, align 4
  br label %34

17:                                               ; preds = %1
  %18 = load %struct.repository*, %struct.repository** %3, align 8
  %19 = call %struct.commit* @lookup_commit(%struct.repository* %18, %struct.object_id* %4)
  store %struct.commit* %19, %struct.commit** %6, align 8
  %20 = load %struct.commit*, %struct.commit** %6, align 8
  %21 = call i64 @parse_commit(%struct.commit* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %17
  store i32 -1, i32* %2, align 4
  br label %34

24:                                               ; preds = %17
  %25 = load %struct.index_state*, %struct.index_state** %7, align 8
  %26 = call %struct.object_id* @get_cache_tree_oid(%struct.index_state* %25)
  store %struct.object_id* %26, %struct.object_id** %5, align 8
  %27 = icmp ne %struct.object_id* %26, null
  br i1 %27, label %29, label %28

28:                                               ; preds = %24
  store i32 -1, i32* %2, align 4
  br label %34

29:                                               ; preds = %24
  %30 = load %struct.object_id*, %struct.object_id** %5, align 8
  %31 = load %struct.commit*, %struct.commit** %6, align 8
  %32 = call i32 @get_commit_tree_oid(%struct.commit* %31)
  %33 = call i32 @oideq(%struct.object_id* %30, i32 %32)
  store i32 %33, i32* %2, align 4
  br label %34

34:                                               ; preds = %29, %28, %23, %14
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local i32 @resolve_ref_unsafe(i8*, i32, %struct.object_id*, i32*) #1

declare dso_local i32 @error(i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local %struct.commit* @lookup_commit(%struct.repository*, %struct.object_id*) #1

declare dso_local i64 @parse_commit(%struct.commit*) #1

declare dso_local %struct.object_id* @get_cache_tree_oid(%struct.index_state*) #1

declare dso_local i32 @oideq(%struct.object_id*, i32) #1

declare dso_local i32 @get_commit_tree_oid(%struct.commit*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
